# MobileAutomation

./: .swiftformat  LICENSE  Makefile  README.md
Applications/MobileAutomationAgent/: .gitignore  project.yml
Applications/MobileAutomationAgent/MobileAutomationAgent/Sources/: AgentService.swift  AgentServiceKeyStore.swift  AgentTools.swift  AirPlayScreenshotService.swift  AnthropicSettingsSection.swift  ApiKeySecureField.swift  AppDelegate.swift  AppDelegateEnvironmentViewModifier.swift  BackgroundAudioManager.swift  Configuration.swift  FoundationModelAvailabilityLabel.swift  FoundationModelSettingsSection.swift  LEDBlinker.swift  LiveActivityManager.swift  MainApp.swift  MainView.swift  NotificationManager.swift  OpenAISettingsSection.swift  PreviewEnvironmentViewModifier.swift  PromptProfile.swift  PromptProfileDetailed.swift  SettingsView.swift  TranscriptRow.swift  TranscriptView.swift
Applications/MobileAutomationAgent/MobileAutomationAgentWidget/Sources/: AgentLiveActivity.swift  AgentWidgetBundle.swift
Applications/MobileAutomationAgent/Shared/Sources/: AgentActivityAttributes.swift
Applications/MobileAutomationClient/: .gitignore  project.yml
Applications/MobileAutomationClient/Configurations/: MobileAutomationClient.xcconfig
Applications/MobileAutomationClient/MobileAutomationClient/Sources/: AbsoluteMouseEditorView.swift  AppDelegate.swift  AppDelegateEnvironmentViewModifier.swift  BackgroundAudioManager.swift  ClickEditorView.swift  (+21 more)
Firmware/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.c  tusb_config.h  usb_descriptors.c
